<resources>
    <string name="app_name">NavigationDrawerExample</string>

    <string name="hint_id">ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="beneficiaryaddress">Address</string>
    <string name="beneficiarycountry">Country</string>

    <string name="register_benef">Register Beneficiary</string>
    <string name="show_list_benef">List of Registered Beneficiary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Nombre</string>

    <string name="register_prod">Registrar Producto</string>
    <string name="show_list_prod">Listado de Registro de Producto</string>

    <string name="productocategoria">Categoria</string>
    <string name="productounidad">UnidadNegocio</string>
    <string name="productoprecio">Precio</string>

    <string name="hint_producto">Producto</string>
    <string name="hint_marcas">Marca</string>
    <string name="hint_categoria">Categoria</string>
    <string name="hint_unidad">UnidadNegocio</string>
    <string name="hint_precio">Precio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
